# videoplayer

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  loudness_enhancer.cpp  media_engine.cpp  offline_buffer.cpp
app/src/main/cpp/include/: media_engine.h
app/src/main/java/com/example/mediaframework/engine/: MediaEngine.kt
app/src/main/java/com/example/mediaframework/playback/: MediaPlaybackService.kt
